- Add JSEncrypt <http://travistidwell.com/jsencrypt/> to "js_lib" directory in "lib" directory and
  remove "bi2php" from "lib" directory to improve speed performance of Native Authentication.
- The INTERMediator.recordLimit property is introduced to store the number of records. Also added methods:
  INTERMediator.setRecordLimit(cname, limit) and INTERMediator.clearRecordLimit(cname).
- Remove search_page2.html ("search(using JavaScript)") in Practices directory.
- Update deploy.sh and recipe.rb etc. for the INTER-Mediator-Server virtual machine and CI.
- THEAD/TFOOT of table can be set the linked node with caluculation.
- Calculation to aggregate of same context as like "sum(mycontext@price)".
- [INFO] Require a 2048-bit private key at least for authentication. Please update in case of using Native
  Authentication or LDAP Authentication.
- [INFO] FileMaker Data API (Trial) of FileMaker Server 16 is no longer supported.
- [BUG FIX] If the server doesn't have valid locale (ex. Windows Server), the number format with thousand
  separator wasn't seen as we wished.
- [BUG FIX] In some case, the record number of related context was affected by pagination record limits.
- [BUG FIX] Fix buildup.sh to minify correctly on FreeBSD (Thanks to Tomomitsu Baba).
- [BUG FIX] In step navigation page, sometimes tap affected to clicking any elements on moved page.

Ver.5.7 (March 29, 2018)
- The "data-im-format" attribute is introduced.
  Please see for detail: <http://inter-mediator.info/ja/for-developers/format.html> (Japanese)
- Microsoft SQL Server is contained in INTER-Mediator support database.
- Support PHP 7.2.
- Start to support FileMaker Data API (Trial) of FileMaker Server 16 as an experimental feature.
- Add FMDataAPI.php (FMDataAPI Ver.6) in "lib" directory for FileMaker Data API (Trial).
- Step navigation is introduced. The 'nav-control' key can have values 'step' and 'step-hide'.